--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -41,6 +41,13 @@
 }
 
 
+.break-word,
+%break-word {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+}
+
+
 .ellipsis,
 %ellipsis {
     overflow: hidden;
