--- a/src/sass/helpers/_functions.scss
+++ b/src/sass/helpers/_functions.scss
@@ -14,7 +14,7 @@
 
 
 // String replace
-@function str-replace($string, $search, $replace: "") {
+@function str-replace($string, $search, $replace: '') {
     $index: str-index($string, $search);
     
     @if $index {
