--- a/src/templates/components/_body-before-close.pug
+++ b/src/templates/components/_body-before-close.pug
@@ -2,7 +2,7 @@
     Body Before Close
 
 //JavaScript Sources
-//build:js js/main.min.js
+//build:js js/main.min.js async
 
 //Bower Components
 //bower:js
