--- a/src/templates/components/sections/_portfolio.pug
+++ b/src/templates/components/sections/_portfolio.pug
@@ -5,9 +5,9 @@ section(id="portfolio" class="section portfolio-wrapper")
     .container
         .row.no-gutters.flex-column.align-items-center
             .section-decoration
-                span.icon.icon-2.icon-code.section-decoration-icon
+                span(aria-hidden="true" class="icon icon-2 icon-code section-decoration-icon")
             header.section-header
-                h2.heading.heading-2.heading-unique-1.text-center= data.mainWrapper.portfolioWrapper.header.h2
+                h2.heading.heading-2.heading-unique-1.section-header-title.text-center= data.mainWrapper.portfolioWrapper.header.h2
                 .heading-separator
                     .heading-separator__line
                     .heading-separator__square.primary
