--- a/src/sass/components/_section.scss
+++ b/src/sass/components/_section.scss
@@ -5,6 +5,7 @@
 
 // .section:nth-child(odd)
 $section__odd__background-color: $color__snow !default;
+
 // .section-decoration
 $section-decoration__border: 10px solid $color__white !default;
 $section-decoration__box-shadow: 2.5px 2.5px 10px 0 rgba($color__black-1, 0.1) !default;
@@ -12,6 +13,10 @@ $section-decoration__box-shadow: 2.5px 2.5px 10px 0 rgba($color__black-1, 0.1) !
 $section-decoration-icon__before__background-color: $primary-color !default;
 $section-decoration-icon__before__color: $color__white !default;
 $section-decoration-icon__before__box-shadow: 0 0 0 25px $primary-color !default;
+
+// .section-header-description
+$section-header-title__font-size-xs: 2.5em !default;
+
 // .section-header-description
 $section-header-description__font-size: 1.05em !default;
 
@@ -24,7 +29,7 @@ $section-header-description__font-size: 1.05em !default;
     &-decoration {
         width: 75.5px;
         height: 75.5px;
-        transform: perspective(99px) translateZ(1px) rotate(45deg);
+        transform: perspective(999px) translateZ(1px) rotate(45deg);
         overflow: hidden;
         border: $section-decoration__border;
         box-shadow: $section-decoration__box-shadow;
@@ -34,7 +39,7 @@ $section-header-description__font-size: 1.05em !default;
                 line-height: 1;
                 background-color: $section-decoration-icon__before__background-color;
                 display: block;
-                transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
+                transform: perspective(999px) translateY(11px) translateZ(1px) rotate(-45deg);
                 text-align: center;
                 color: $section-decoration-icon__before__color;
                 box-shadow: $section-decoration-icon__before__box-shadow;
@@ -44,15 +49,15 @@ $section-header-description__font-size: 1.05em !default;
     &-header {
         max-width: 100%;
         padding: 115px 0 65px;
+        &-title {
+            @include media-breakpoint-down(xs) {
+                font-size: $section-header-title__font-size-xs;
+            }
+        }
         &-description {
             font-size: $section-header-description__font-size;
             text-align: center;
             margin: 0;
-        }
-        & > .heading-2 {
-            @include media-breakpoint-down(xs) {
-                font-size: 2.5em;
-            }
         }
     }
 }
