--- a/src/sass/components/buttons/_buttons.scss
+++ b/src/sass/components/buttons/_buttons.scss
@@ -79,7 +79,8 @@ $btn-twitter__color: $color__twitter !default;
             left: 100%;
             top: 0;
         }
-        &:hover {
+        &:hover,
+        &:focus {
             &::after {
                 transform: translate3d(-100%, 0, 0);
             }
@@ -89,7 +90,8 @@ $btn-twitter__color: $color__twitter !default;
         &::after {
             left: -100%;
         }
-        &:hover {
+        &:hover,
+        &:focus {
             &::after {
                 transform: translate3d(100%, 0, 0);
             }
@@ -99,7 +101,8 @@ $btn-twitter__color: $color__twitter !default;
         &::after {
             top: 100%;
         }
-        &:hover {
+        &:hover,
+        &:focus {
             &::after {
                 transform: translate3d(0, -100%, 0);
             }
@@ -109,7 +112,8 @@ $btn-twitter__color: $color__twitter !default;
         &::after {
             top: -100%;
         }
-        &:hover {
+        &:hover,
+        &:focus {
             &::after {
                 transform: translate3d(0, 100%, 0);
             }
@@ -131,7 +135,8 @@ $btn-twitter__color: $color__twitter !default;
         backface-visibility: hidden;
         transition: 0.2s transform ease-in-out, 0.3s background-color ease-in-out;
     }
-    &:hover {
+    &:hover,
+    &:focus {
         color: $btn__hover__color;
         &::after {
             background-color: $btn__hover__after__background-color;
@@ -147,7 +152,8 @@ $btn-twitter__color: $color__twitter !default;
     
     &-hover {
         &-white {
-            &:hover {
+            &:hover,
+            &:focus {
                 color: $color__white;
             }
         }
