--- a/src/sass/components/links/_links.scss
+++ b/src/sass/components/links/_links.scss
@@ -3,38 +3,38 @@
 //~~~~~~~~~~~~~~~~~~~~~//
 
 
-// a :link - :visited
-$a__link-visited__color: darken($color__navy-blue, 4%) !default;
-// a :hover
-$a__hover__color: $primary-color !default;
-// a :active
-$a__active__color: $primary-color-dark !default;
-
-
-a {
-    &.link {
-        transition: 0.25s color ease-in-out;
-        &,
-        &:link,
-        &:visited {
-            color: $a__link-visited__color;
-        }
-        &:hover {
-            color: $a__hover__color;
-        }
-        &:active {
-            color: $a__active__color;
-        }
-    }
-    &.no-link {
-        &,
-        &:link,
-        &:visited {
-            color: inherit;
-        }
-    }
-    &.link,
-    &.no-link {
-        text-decoration: none;
-    }
-}
+//// a :link - :visited
+//$a__link-visited__color: darken($color__navy-blue, 4%) !default;
+//// a :hover
+//$a__hover__color: $primary-color !default;
+//// a :active
+//$a__active__color: $primary-color-dark !default;
+//
+//
+//a {
+//    &.link {
+//        transition: 0.25s color ease-in-out;
+//        &,
+//        &:link,
+//        &:visited {
+//            color: $a__link-visited__color;
+//        }
+//        &:hover {
+//            color: $a__hover__color;
+//        }
+//        &:active {
+//            color: $a__active__color;
+//        }
+//    }
+//    &.no-link {
+//        &,
+//        &:link,
+//        &:visited {
+//            color: inherit;
+//        }
+//    }
+//    &.link,
+//    &.no-link {
+//        text-decoration: none;
+//    }
+//}
