--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -14,8 +14,8 @@ $line-height__1-2:      1.2;
 $line-height__1-3:      1.3;
 
 // Fonts
-$font__raleway:         "Raleway";
-$font__source-sans-pro: "Source Sans Pro";
+$font__raleway:         'Raleway';
+$font__source-sans-pro: 'Source Sans Pro';
 $font__sans-serif:      sans-serif;
 
 // Fonts Sizes
