--- a/src/templates/components/sections/_about-me-information-contact.pug
+++ b/src/templates/components/sections/_about-me-information-contact.pug
@@ -2,9 +2,9 @@
     About Me ~ Information & Contact
 
 .about-me-section
-    header.row.no-gutters.align-items-center.about-me-section-header
-        span.icon.icon-15.icon-info.about-me-section-icon
-        span.filling-line.beginning-xs
+    header.about-me-section-header
+        span(aria-hidden="true" class="icon icon-15 icon-info about-me-section-icon")
+        span.filling-line
         h3.heading.heading-4.text-center
             | #{data.mainWrapper.aboutMeWrapper.informationContact.h3[0]}
             br
