--- a/src/templates/components/sections/_services.pug
+++ b/src/templates/components/sections/_services.pug
@@ -5,9 +5,9 @@ section(id="services" class="section services-wrapper")
     .container
         .row.no-gutters.flex-column.align-items-center
             .section-decoration
-                span.icon.icon-2.icon-wrench.section-decoration-icon
+                span(aria-hidden="true" class="icon icon-2 icon-wrench section-decoration-icon")
             header.section-header
-                h2.heading.heading-2.heading-unique-1.text-center= data.mainWrapper.servicesWrapper.header.h2
+                h2.heading.heading-2.heading-unique-1.section-header-title.text-center= data.mainWrapper.servicesWrapper.header.h2
                 .heading-separator
                     .heading-separator__line
                     .heading-separator__square.primary
@@ -22,5 +22,5 @@ section(id="services" class="section services-wrapper")
                     .heading-separator
                         .heading-separator__line.heading-separator__line-bolded-3.primary
                     p.paragraph.services-item-description!= obj.description
-                    button(type="button" class="btn to-top btn-primary services-item-button")
+                    button(type="button" data-src="" class="btn to-top btn-primary services-item-button services-item-button-js")
                         span= obj.button
